scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_subdir(
  scalable_dir,
  install_dir: get_option('datadir') / 'icons/hicolor/scalable'
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_subdir(
  symbolic_dir,
  install_dir: get_option('datadir') / 'icons/hicolor/symbolic'
)

ui_dir = 'hicolor' / 'symbolic' / 'ui'
install_subdir(
  symbolic_dir,
  install_dir: get_option('datadir') / 'icons/hicolor/symbolic'
)

install_data('io.github.giantpinkrobots.bootqt.png',
  install_dir: join_paths(get_option('datadir'), 'icons')
)