install_subdir(
  'actions',
  install_dir: join_paths(get_option('datadir'), 'icons')
)

install_subdir(
  'apps',
  install_dir: join_paths(get_option('datadir'), 'icons')
)

install_subdir(
  'scalable' / 'apps',
  install_dir: get_option('datadir') / 'icons/hicolor/scalable'
)

install_subdir(
  'symbolic' / 'apps',
  install_dir: get_option('datadir') / 'icons/hicolor/symbolic'
)